After rewriting Type Information Chapter, added missing @Override