@@ -1,5 +1,5 @@
 // typeinfo/toys/GenericToyTest.java
-// (c)2020 MindView LLC: see Copyright.txt
+// (c)2021 MindView LLC: see Copyright.txt
 // We make no guarantees that this code is fit for any purpose.
 // Visit http://OnJava8.com for more book information.
 // Testing class Class
@@ -7,17 +7,16 @@
 package typeinfo.toys;
 
 public class GenericToyTest {
-  @SuppressWarnings("deprecation")
   public static void
   main(String[] args) throws Exception {
-    Class<FancyToy> ftClass = FancyToy.class;
+    Class<FancyToy> ftc = FancyToy.class;
     // Produces exact type:
-    FancyToy fancyToy = ftClass.newInstance();
-    Class<? super FancyToy> up =
-      ftClass.getSuperclass();
+    FancyToy fancyToy =
+      ftc.getConstructor().newInstance();
+    Class<? super FancyToy> up = ftc.getSuperclass();
     // This won't compile:
-    // Class<Toy> up2 = ftClass.getSuperclass();
+    // Class<Toy> up2 = ftc.getSuperclass();
     // Only produces Object:
-    Object obj = up.newInstance();
+    Object obj = up.getConstructor().newInstance();
   }
 }
